# MultiMC5

launcher/: CMakeLists.txt
notsecrets/: CMakeLists.txt
